--- a/WebApp/Pages/EventInfos/Edit.cshtml
+++ b/WebApp/Pages/EventInfos/Edit.cshtml
@@ -5,46 +5,79 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<div class="bg-white" style="height: calc(100vh - 389px)">
+    <div class="row" style="margin-right: 0; margin-left: 0;">
 
-<h4>EventInfo</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="EventInfo.Id" />
-            <div class="form-group">
-                <label asp-for="EventInfo.EventName" class="control-label"></label>
-                <input asp-for="EventInfo.EventName" class="form-control" />
-                <span asp-validation-for="EventInfo.EventName" class="text-danger"></span>
+        <div class="col-md-3 bg-primary text-white d-flex align-items-center justify-content-center">
+            <h2 class="text-center">Ürituse muutmine</h2>
+        </div>
+
+        <div class="col-md-9 p-0" style="height: 100px; overflow: hidden; object-fit: cover;">
+            <img style="width: 150%; " src="~/images/libled.jpg" alt="no img found"/>
+        </div>
+
+    </div>
+
+    <div class="w-50 align-content-center mx-auto">
+        <br/>
+        <br/>
+        <h3 class="text-primary">Ürituse muutmine</h3>
+        <br/>
+        <div class="row">
+            <div class="col">
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="EventInfo.Id"/>
+
+                    <div class="form-group row mb-3">
+                        <label for="EventName" class="col-sm-3 col-form-label">Ürituse nimi:</label>
+                        <div class="col-sm-9">
+                            <input asp-for="EventInfo.EventName" class="form-control" id="EventName">
+                            <span asp-validation-for="EventInfo.EventName" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group row mb-3">
+                        <label asp-for="EventInfo.EventDateTime" class="col-sm-3 col-form-label">Toimumisaeg: </label>
+                        <div class="col-sm-9">
+                            <input asp-for="EventInfo.EventDateTime" min="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")" class="form-control" required/>
+                            <span asp-validation-for="EventInfo.EventDateTime" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group row mb-3">
+                        <label asp-for="EventInfo.EventLocation" class="col-sm-3 col-form-label">Koht: </label>
+                        <div class="col-sm-9">
+                            <input asp-for="EventInfo.EventLocation" class="form-control" required/>
+                            <span asp-validation-for="EventInfo.EventLocation" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label asp-for="EventInfo.EventDescription" class="col-sm-3 col-form-label">Lisainfo: </label>
+                        <div class="col-sm-9">
+                            <textarea asp-for="EventInfo.EventDescription" maxlength="1000" style="resize: none;" class="form-control" rows="4"></textarea>
+                            <span asp-validation-for="EventInfo.EventDescription" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <br/>
+                    <br/>
+
+
+                    <div class="form-group">
+                        <div class="col-sm-3">
+                            <a class="btn btn-light me-2" style="width: 74px" asp-page="Index">Tagasi</a>
+                            <input type="submit" style="width: 74px" value="Lisa" class="btn btn-primary"/>
+                        </div>
+                        <div class="col-sm-9"></div>
+                    </div>
+
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="EventInfo.EventLocation" class="control-label"></label>
-                <input asp-for="EventInfo.EventLocation" class="form-control" />
-                <span asp-validation-for="EventInfo.EventLocation" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EventInfo.EventDateTime" class="control-label"></label>
-                <input asp-for="EventInfo.EventDateTime" class="form-control" />
-                <span asp-validation-for="EventInfo.EventDateTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EventInfo.EventDescription" class="control-label"></label>
-                <input asp-for="EventInfo.EventDescription" class="form-control" />
-                <span asp-validation-for="EventInfo.EventDescription" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
