--- a/WebApp/Pages/EventInfos/Create.cshtml
+++ b/WebApp/Pages/EventInfos/Create.cshtml
@@ -66,7 +66,7 @@
 
                     <div class="form-group">
                         <div class="col-sm-3">
-                            <a class="btn btn-light me-2" style="width: 74px" asp-page="Index">Tagasi</a>
+                            <a class="btn btn-light me-2" style="width: 74px" asp-page="../Index">Tagasi</a>
                             <input type="submit" style="width: 74px" value="Lisa" class="btn btn-primary"/>
                         </div>
                         <div class="col-sm-9"></div>
