--- a/WebApp/Pages/EventInfos/Create.cshtml
+++ b/WebApp/Pages/EventInfos/Create.cshtml
@@ -67,7 +67,7 @@
                     <div class="form-group">
                         <div class="col-sm-3">
                             <a class="btn btn-light me-2" style="width: 74px" asp-page="../Index">Tagasi</a>
-                            <input type="submit" style="width: 74px" value="Lisa" class="btn btn-primary"/>
+                            <input type="submit" id="submitCreateButtonId" style="width: 74px" value="Lisa" class="btn btn-primary"/>
                         </div>
                         <div class="col-sm-9"></div>
                     </div>
