Added README info plus small fixes.

--- a/WebApp/Pages/EventInfos/Create.cshtml
+++ b/WebApp/Pages/EventInfos/Create.cshtml
@@ -5,16 +5,16 @@
     ViewData["Title"] = "Create";
 }
 
-<div class="bg-white" style="height: calc(100vh - 389px)">
+<div class="bg-white">
     <div class="row" style="margin-right: 0; margin-left: 0;">
 
         <div class="col-md-3 bg-primary text-white d-flex align-items-center justify-content-center">
             <h1 class="text-center">Ürituse lisamine</h1>
         </div>
-        
+
         <div class="col-md-9 p-0" style="height: 100px; overflow: hidden; object-fit: cover;">
-                <img style="width: 150%; " src="~/images/libled.jpg" alt="no img found"/>
-            </div>
+            <img style="width: 150%; " src="~/images/libled.jpg" alt="no img found"/>
+        </div>
 
     </div>
 
@@ -36,7 +36,7 @@
                         </div>
                     </div>
 
-                    
+
                     <div class="form-group row mb-3">
                         <label asp-for="EventInfo.EventDateTime" class="col-sm-3 col-form-label">Toimumisaeg: </label>
                         <div class="col-sm-9">
@@ -71,7 +71,8 @@
                         </div>
                         <div class="col-sm-9"></div>
                     </div>
-
+                    <br/>
+                    <br/>
                 </form>
             </div>
         </div>
