--- a/WebApp/Pages/EventInfos/Edit.cshtml
+++ b/WebApp/Pages/EventInfos/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<div class="bg-white" style="height: calc(100vh - 389px)">
+<div class="bg-white">
     <div class="row" style="margin-right: 0; margin-left: 0;">
 
         <div class="col-md-3 bg-primary text-white d-flex align-items-center justify-content-center">
@@ -65,13 +65,14 @@
 
 
                     <div class="form-group">
-                        <div class="col-sm-3">
-                            <a class="btn btn-light me-2" style="width: 74px" asp-page="Index">Tagasi</a>
-                            <input type="submit" style="width: 74px" value="Lisa" class="btn btn-primary"/>
+                        <div class="col-sm-4">
+                            <a class="btn btn-light me-2" style="width: 70px" asp-page="Index">Tagasi</a>
+                            <input type="submit" value="Salvesta"  class="btn btn-primary"/>
                         </div>
-                        <div class="col-sm-9"></div>
+                        <div class="col-sm-8"></div>
                     </div>
-
+                    <br/>
+                    <br/>
                 </form>
             </div>
         </div>
