--- a/WebApp/Pages/Participators/Edit.cshtml
+++ b/WebApp/Pages/Participators/Edit.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<div class="bg-white" style="height: calc(100vh - 389px)">
+<div class="bg-white">
     <div class="row" style="margin-right: 0; margin-left: 0;">
 
         <div class="col-md-3 bg-primary text-white d-flex align-items-center justify-content-center">
@@ -90,7 +90,7 @@
                                 </div>
                                 <div class="col-sm-8"></div>
                             </div>
-
+                            <br/>
                         </form>
                     }
                     else
@@ -152,11 +152,12 @@
                                 </div>
                                 <div class="col-sm-8"></div>
                             </div>
-
+                            <br/>
                         </form>
                     }
                 }
             </div>
+
         </div>
     </div>
 </div>
